tests/paczka1/small_fuzzy/76222748.err
Error in line 1: FAXlTaRi S326 58,9
Error in line 7: 5BmykcFVq S423 57,6
Error in line 10: CuRn7jRfwrk A298 90,8
